// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/Point with default appearance 1`] = `<[object Object] />`;

exports[`react-graph-editor/Point with diamond appearance 1`] = `
<Point
  selected={false}
  x={0}
  y={0}
/>
`;

exports[`react-graph-editor/Point with diamond, selected appearance 1`] = `
<Point
  selected={true}
  x={0}
  y={0}
/>
`;

exports[`react-graph-editor/Point with selected appearance 1`] = `<[object Object] />`;

exports[`react-graph-editor/Point with square appearance 1`] = `
<Point
  selected={false}
  x={0}
  y={0}
/>
`;

exports[`react-graph-editor/Point with square, selected appearance 1`] = `
<Point
  selected={true}
  x={0}
  y={0}
/>
`;

exports[`react-graph-editor/Point with theme 1`] = `
<Point
  selected={false}
  x={0}
  y={0}
/>
`;

exports[`react-graph-editor/Point with theme and selected appearance 1`] = `
<Point
  selected={true}
  x={0}
  y={0}
/>
`;
